--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+Changes in 2.0.2
+----------------
+
+  * Improve README content and Markdown rendering
+  * The revision 2.0.1 does not exists because of a tagging error
+
 Changes in 2.0
 --------------
 
