--- a/CHANGES
+++ b/CHANGES
@@ -18,21 +18,21 @@ Changes in 2.1
 --------------
 
   * Driver does not accept power_mode parameter anymore. Chip power save mode
-    is now set dynamically set using native Linux API. So, command below is
+    is now set dynamically using native Linux API. So, command below is
     equivalent to power_mode=0:
         iw dev wlan set power_save off
-    Enabling power_save is equivalent power_mode=2 if wakeup_gpio is defined
+    Enabling power_save is equivalent to power_mode=2 if wakeup_gpio is defined
     (in DT).  Else, if wakeup_gpio is not defined, it is equivalent to
     power_mode=1.
-  * Driver try now to load a firmware with keyset in its name (i.e.
+  * Driver tries now to load a firmware with keyset in its name (i.e.
     wfm_wf200_C0.sec). If it is not found, it fallbacks to legacy firmware name
-    (wfm_wf200.sec). This feature allows install firmware for multiple chips
+    (wfm_wf200.sec). This feature allows installing firmware for multiple chips
     alongside.
   * Testmode was removed from public releases. Indeed, driver relied on
-    NL80211_TESTMODE but did not provide any usefull testmode commands.
+    NL80211_TESTMODE but did not provide any useful testmode commands.
   * Uniformize debug traces
   * Fix race condition during chip identification on SPI
-  * Scan now wait longer for AP response
+  * Scan now waits longer for AP response
   * Fix UAPSD that was broken since 2.0
   * Fix listening mode (that created an unsolicited AP):
   * Fix some errors pointed by checkpatch.pl
@@ -76,8 +76,8 @@ Changes in 1.6
 
   * Fix maximum bitrate in IBSS mode
   * Show interface id in traces
-  * Improve SDIO bandwith by improving usage of block mode
-  * Improve SPI bandwith by ensuring that buffer size are 32bits aligned
+  * Improve SDIO bandwidth by improving usage of block mode
+  * Improve SPI bandwidth by ensuring that buffer size are 32bits aligned
   * Fix crash during join when BSS is NULL
   * Fix possible race condition while calling ieee80211_bss_get_ie()
   * Fix driver stuck during unbind (mainly with SDIO, but also with SPI)
@@ -85,10 +85,10 @@ Changes in 1.6
 Changes in 1.5 (not released)
 -----------------------------
 
-  * Introduce a framework to change arbitrary fileds in WSM messages
-  * Replace ldpc and sgi module parameters with a dynamic parameters in debugfs:
+  * Introduce a framework to change arbitrary fields in WSM messages
+  * Replace ldpc and sgi module parameters with dynamic parameters in debugfs:
       /sys/kernel/debug/ieee80211/phy0/wfx/wsm_params
-  * Add files in debugfs to change contents of WSM_MIB_ID_BEACON_WAKEUP_PERIOD
+  * Add files in debugfs to change content of WSM_MIB_ID_BEACON_WAKEUP_PERIOD
   * Add files in debugfs to change content of WSM_MIB_ID_BLOCK_ACK_POLICY
   * Enable LDPC with hardware revision >= A2
   * Replace traces for SDIO/SPI messages with tracepoints (see README for usage)
@@ -161,10 +161,10 @@ Changes in 1.3.0
   * Driver is now maintained outside of reference kernel. This prominent change
     may break some process.
   * PDS format changes. It is now necessary to use a compressed PDS.
-  * Driver now compile with kernels from 4.4 to 4.18
-  * Driver now autoload when chip is detected on SDIO bus
+  * Driver now compiles with kernels from 4.4 to 4.18
+  * Driver now autoloads when chip is detected on SDIO bus
   * Chipset CW1200 is no more supported by this driver
-  * Testmode is automatically enabled if kernel enable NL80211_TESTMODE
+  * Testmode is automatically enabled if kernel enables NL80211_TESTMODE
   * Jenkins recipe is now versioned with this driver
   * When compiled with "_NO_PROD", output files does not have different name
 
