--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+Changes in 2.3.1
+----------------
+
+  * Fix regression introduced in 2.3 about RSSI measurement
+
 Changes in 2.3
 --------------
 
