--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,16 @@
 Changes in 2.3.2
 ----------------
 
+  * Fix some thoughput issues caused by:
+     - wrong tx_retry_policy reset
+     - overflow in the usage counter of tx_retry_policies
+  * Backport changes accepted in kernel 5.5. It contains mainly cometics
+    changes.
+  * Update architecture in documentation
+
+Changes in 2.3.2
+----------------
+
   * Do not use tx_retry_policy 15 that is reserved for firmware internal usage
   * Add parameter slk_unsecure_cmds to exclude some commands from encryption set
     when secure link is used (mainly for debug purpose)
