--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,9 @@
-Changes in 2.3.2
+Changes in 2.3.4
+----------------
+
+  * Improve thoughput by changing the way to build tx_retry_policies requests
+
+Changes in 2.3.3
 ----------------
 
   * Fix some thoughput issues caused by:
