--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+Changes in 2.3.5
+----------------
+
+  * Fix support of secure link
+  * Fix change in rx_stats output introduced in 2.3.3
+
 Changes in 2.3.4
 ----------------
 
